--- a/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
+++ b/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
@@ -1,4 +1,7 @@
 <div class="container mt-4">
+    <div class="row">
+        <h1>Your Profile</h1>
+      </div>
   <div class="row">
     <div class="col-sm-4">
       <div class="card">
@@ -31,7 +34,7 @@
     </div>
     <div class="col-sm-8">
       <div class="tab-panel">
-        <tabset>
+        <tabset class="member-tabset">
           <tab heading="About">
              <h4>Description</h4>
              <p>{{user.introduction}}</p>
